src/test/test-models/bad/gm/bad2.stan
data { real a[3]; } model { a <- 2.0; }
